[build-system]
requires = ["setuptools>61.0.0", "wheel", "numpy>=1.22,<1.27"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-fft"
description = "SHIFT performs Fast Fourier transforms on data in polar, spherical and cartesian coordinates."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Krishna Naidoo", email = "krishna.naidoo.11@ucl.ac.uk"}]
maintainers = [{name = "Krishna Naidoo", email = "krishna.naidoo.11@ucl.ac.uk"}]
keywords = ["mathematics", "fourier transforms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Fourier Transforms",
]
dependencies = [
    "numba",
    "numba-scipy",
    "numpy",
    "scipy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/knaidoo29/SHIFT"
Repository = "https://github.com/knaidoo29/SHIFT"
Documentation = "https://shift-doc.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/knaidoo29/SHIFT/issues"
Changelog = "https://github.com/knaidoo29/SHIFT/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["black", "flake8", "ipython", "jupyter", "mypy"]
docs = ["numpydoc", "sphinx", "sphinx-rtd-theme"]
test = [
    "nose",
    "pytest>=6.0",
    "pytest-cov"
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "docs", "tests", "tutorials"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
shift = ["*.json", "*.md", "*.txt"]