[build-system]
requires = ["setuptools>61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-fft"
description = "SHIFT is a scalable MPI library for computing fast Fourier transforms in python."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Krishna Naidoo", email = "krishna.naidoo.11@ucl.ac.uk"}]
maintainers = [{name = "Krishna Naidoo", email = "krishna.naidoo.11@ucl.ac.uk"}]
keywords = ["mathematics", "fourier transforms"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numba",
    "numpy",
    "scipy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/knaidoo29/SHIFT"
Repository = "https://github.com/knaidoo29/SHIFT"
Documentation = "https://shift-doc.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/knaidoo29/SHIFT/issues"
Changelog = "https://github.com/knaidoo29/SHIFT/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["black", "flake8", "ipython", "jupyter", "mypy"]
docs = ["numpydoc", "sphinx", "sphinx-rtd-theme"]
test = [
    "pytest>=6.0",
    "pytest-cov"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "docs", "tests", "tutorials"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
shift = ["*.json", "*.md", "*.txt"]
